fix z-index issue

--- a/core/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/core/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -77,6 +77,7 @@
     }
   }
   .inline-editable-image-container {
+    z-index: 1;
     .img-responsive {
       width: 100%;
     }
@@ -194,6 +195,7 @@
 }
 
 .inline-module {
+  z-index: 1;
   &:hover {
     .module-layout {
       opacity: 1 !important;
@@ -201,7 +203,8 @@
   }
   .module-layout {
     top: 15px;
-    left: 15px;
+    left: 50%;
+    transform: translateX(-50%);
     position: absolute;
     opacity: 0;
     transition: .2s ease-out;
